增加了简体中文本土化的语言包Localization is in progress.

--- a/FreeAIr/UI/Embedillo/EmbedilloControl.xaml
+++ b/FreeAIr/UI/Embedillo/EmbedilloControl.xaml
@@ -43,7 +43,7 @@
             </Behaviors:Interaction.Behaviors>
 
         </avalonEdit:TextEditor>
-        <Label
+        <TextBlock
             x:Name="HintLabel"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
@@ -51,7 +51,9 @@
             FontSize="{Binding ElementName=EmbedilloInternalName, Path=FontSize}"
             Foreground="Gray"
             Background="Transparent"
-            Content="{Binding ElementName=EmbedilloInternalName, Path=HintText}"
+            Text="{Binding ElementName=EmbedilloInternalName, Path=HintText}"
+            TextWrapping="Wrap"
+            TextAlignment="Center"
             Margin="0"
             Padding="0"
             Focusable="False"
