--- a/FreeAIr/UI/Windows/NestedCheckBoxWindow.xaml
+++ b/FreeAIr/UI/Windows/NestedCheckBoxWindow.xaml
@@ -1,17 +1,18 @@
-﻿<Window x:Class="FreeAIr.UI.Windows.NestedCheckBoxWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:nestedcheckbox="clr-namespace:FreeAIr.UI.NestedCheckBox"
-        xmlns:ui="clr-namespace:FreeAIr.UI"
-        mc:Ignorable="d"
-        ui:VsTheme.UseVsTheme="True"
-        WindowStyle="None"
-        KeyUp="Window_KeyUp"
-        Height="450" Width="800"
-        Loaded="Window_Loaded"
-        >
+﻿<Window
+    x:Class="FreeAIr.UI.Windows.NestedCheckBoxWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:nestedcheckbox="clr-namespace:FreeAIr.UI.NestedCheckBox"
+    xmlns:ui="clr-namespace:FreeAIr.UI"
+    mc:Ignorable="d"
+    ui:VsTheme.UseVsTheme="True"
+    WindowStyle="None"
+    KeyUp="Window_KeyUp"
+    Height="450" Width="800"
+    Loaded="Window_Loaded"
+    >
     <Grid
         Margin="2"
         >
