--- a/FreeAIr/UI/Windows/AgentConfigureWindow.xaml
+++ b/FreeAIr/UI/Windows/AgentConfigureWindow.xaml
@@ -8,6 +8,7 @@
     xmlns:ui="clr-namespace:FreeAIr.UI"
     xmlns:et="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
     xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging" xmlns:imaging1="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
+    xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
     mc:Ignorable="d" 
     d:DesignHeight="700" d:DesignWidth="1000"
     Height="700" Width="1000"
@@ -256,7 +257,7 @@
                     Command="{Binding ChooseModelCommand}"
                     >
                     <Button.Content>
-                        <imaging:CrispImage
+                        <ui:PseudoCrispImage
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Moniker="{x:Static imaging1:KnownMonikers.SelectObject}"
